Ramdomized Set